--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,7 @@
 default: &default
   adapter: postgresql
   database: dd8iug2r9grl3n
+  schema_search_path: myrubyblog
   username: xosjmewwnndunr
   password: XP304CR3e7VynHznnTozso0jhy
   pool: 5
